# comparePrice

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/controllers/: searchController.py  userController.py
backend/app/db/: indexes.py  mongo_client.py  redis_client.py
backend/app/lambda_layer/: ebay_api.py  rainforest_api.py
backend/app/services/: email_service.py  search_service.py  token_service.py  user.py
backend/app/validation/: schemas.py
backend/lambda_layer/: rainforest_api.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/Components/SearchBar/: SearchBar.css  SearchBar.jsx
frontend/src/Features/Login/: Login.css  Login.jsx
frontend/src/Features/Search/: Search.css  Search.jsx
frontend/src/Features/Signup/: Signup.css  Signup.jsx
frontend/src/Features/VerifyCode/: VerifyCode.css  VerifyCode.jsx
frontend/src/pages/: Loginpage.jsx  SignupPage.jsx
